@startuml Worker_Module_Diagram

package Worker {
    object MainWorker 

    folder "Managers" {
        class ShuffleManager {
            + executeRounds(allRounds)
            + executeRound(roundId)
            + reportDoneToMaster(roundId)
            + waitForNextRoundSignal()
        }

        class PartitionManager {
            + partition(path, percentiles)
        }
        
        class SortPartitionTask {
            - inputFilePath: String
            - partitionRanges: Array[PartitionRange]
            - tempDir: String
            + execute()
            --
            + localSort()   // << Local Sorting Logic >>
            + partitionRecords() // << Partitioning Logic >>
        }
        
        class Partitioner {
            + getDestination(key, ranges): (Int, Int) // Binary Search
        }
    }

    folder "Services" {
        class ShuffleWorkerService {
            + executeRound(roundId)
            - openWorkerStream(targetWorkerId)
            - onChunkReceived()
            - closeWorkerStream()
        }

        class ShuffleMasterService {
            + reportRoundCompleteToMaster(roundId)
            + waitForMasterNextRound() : RoundId
            - openMasterStream()
            - onNextRoundSignal()
        }

        class PartitionService {
            + partition(path, percentiles)
        }
    }
    
    folder "Repositories" {
        class GrpcShuffleRepository {
            StreamObserver activeStreamObserver

            + sendChunk(chunk)
            + receiveChunkHandler(handler)
            + reportRoundCompleteToMaster(roundId)
            + waitForMasterNextRound()
            + receiveNextRoundHandler(handler)
            
            - openServer()
            - openClient()
            - openStreamToMaster()
            - close()
        }
            
        class FileStorageRepository {
            + read(path, amount) : data // For reading input block
            + save(path, data)        // For writing temp partition
        }
    }
    
    folder Model {
        object GrpcShuffleStream <<Proto>>
        
        class RecordKey {
            + key: Array[Byte] (10)
            + compareTo(other): Int
        }
        
        class Record {
            + bytes: Array[Byte] (100)
            + key: RecordKey
        }
        
        class PartitionRange {
            + startKey: RecordKey
            + endKey: RecordKey
            + destWorkerId: Int
        }
    }

    ' Relationships
    MainWorker --> PartitionManager : Triggers Sort/Partition
    PartitionManager --> SortPartitionTask : Manages thread pool & tasks
    
    SortPartitionTask ..> Partitioner : Uses to determine destination
    SortPartitionTask ..> Record : Processes
    SortPartitionTask ..> PartitionRange : Reads partition info
    SortPartitionTask ..> FileStorageRepository : Reads input, Writes temp partitions
    
    ' Model relationships
    Record o-- RecordKey
    PartitionRange o-- RecordKey
    
    ' Existing Relationships
    MainWorker --> Managers
    Managers --> Services
    Services --> Repositories
    Repositories --> Model

}
@enduml